# spd_K

./: .gitignore  CMakeLists.txt  README  README.md
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  fallback.md  gallery.md  getting_started.md  gravity.md  index.md  initial_conditions.md  input_reference.md  testing.md  user_ic.md
inputs/: implosion.athinput  induction_loop.athinput  kelvin_helmholtz.athinput  rti.athinput  sedov.athinput  shu_osher.athinput  sine_wave.athinput  sod.athinput  spherical_blast.athinput  square.athinput  user.athinput
scripts/: compare_outputs.py  cross_validate_python.py
src/: boundary.cpp  define.hpp  fv_structs.hpp  global.cpp  global.hpp  hydro.cpp  hydro_ader.hpp  hydro_muscl.hpp  induction.cpp  induction_ader.hpp  initial_conditions.cpp  main.cpp  muscl.cpp  muscl.hpp  output.cpp  parameter_input.cpp  parameter_input.hpp  polynomials.cpp  prototypes.hpp  spd_k.hpp  structs.hpp  test_transforms.cpp  transforms.cpp  trouble_detection.cpp  user_ic.hpp
tests/: bench_layout.cpp  benchmark.py  run_tests.py  spdk_io.py  visual_suite.py
